--- a/bulb.html
+++ b/bulb.html
@@ -4,7 +4,7 @@
         <h2>What can javascript Do?</h2>
         <p>Javascript can change HTML attribute values.</p>
         <p>In this case Javascript changes the value of the src(source) attributes of an image.</p>
-        <button onclick="document.getElementById('myImage').src='bulbon.jpeg'">urn on the light.</button>
+        <button onclick="document.getElementById('myImage').src='bulbon.jpeg'">Turn on the light.</button>
         <img id="myImage" src="bulboff.jpeg" style="width:100px"> 
         <button onclick="document.getElementById('myImage').src='bulboff.jpeg'">Turn off the light</button>
     </body>
